Cell spacing ffox bug

--- a/less/util.less
+++ b/less/util.less
@@ -16,3 +16,7 @@
 .space {
     margin-bottom: 1em;
 }
+
+@-moz-document url-prefix() {
+    fieldset { display: table-cell; }
+}
